added logo and icon